<resources>
    <string name="app_name">AMazeByJustinPark</string>
    <string name="title">Secure The Bag</string>
    <string name="size">Size</string>
    <string name="rooms">Rooms?</string>
    <string name="algorithm">Algorithm</string>
    <string name="on">On</string>
    <string-array name="algorithm_spinner">
        <item>DFS</item>
        <item>Prim</item>
        <item>Boruvka</item>
    </string-array>
    <string name="revisit">Revisit</string>
    <string name="explore">Explore</string>
    <string name="select_driver">Select a Driver</string>
    <string name="select_robot">Select Robot Configurations</string>
    <string-array name="driver_spinner_choices">
        <item>Manual</item>
        <item>Wall Follower</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="robot_spinner_choices">
        <item>Select</item>
        <item>Premium</item>
        <item>Mediocre</item>
        <item>SoSo</item>
        <item>Shaky</item>
    </string-array>
    <string name="progress">Maze Being Generated</string>
    <string name="manual_ready">Manual</string>
    <string name="wallFollower">Wall Follower</string>
    <string name="wizard">Wizard</string>
    <string name="shortcut">ShortCut</string>
    <string name="showMap">Show Map</string>
    <string name="showSolution">Show Solution</string>
    <string name="showWalls">Show Walls</string>
    <string name="zoomIn">Zoom In</string>
    <string name="zoomOut">Zoom Out</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="jump">Jump</string>
    <string name="energy">Energy/Time</string>
    <string name="go2winning">Go2Winning</string>
    <string name="go2losing">Go2Losing</string>
    <string name="speed">Speed</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="lose">You Ran Out of Energy and Couldn\'t Bring Back All the Gifts From the Grinch!</string>
    <string name="win">Congrats! You Stopped the Grinch From Ruining Christmas!</string>
    <string name="pathLength">Path Length:</string>
    <string name="energyConsumption">Energy Consumption:</string>
    <string name="restart">Click Back to Restart the Game</string>
    <string name="shortest">Shortest Path:</string>

</resources>